--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,34 @@
 # =============== #
 # Unity generated #
 # =============== #
-Temp
-Obj
-UnityGenerated
-Library
+Temp/
+Obj/
+UnityGenerated/
+Library/
 
 # ===================================== #
-# Visual Studio  MonoDevelop generated #
+# Visual Studio / MonoDevelop generated #
 # ===================================== #
-ExportedObj
-.svd
-.userprefs
-.csproj
-.pidb
-.suo
-.sln
-.user
-.unityproj
-.booproj
+ExportedObj/
+*.svd
+*.userprefs
+*.csproj
+*.pidb
+*.suo
+*.sln
+*.user
+*.unityproj
+*.booproj
 
 # ============ #
 # OS generated #
 # ============ #
 .DS_Store
-.DS_Store
-._
+.DS_Store?
+._*
 .Spotlight-V100
 .Trashes
-Icon
+Icon?
 ehthumbs.db
 Thumbs.db
 
@@ -36,6 +36,6 @@ Thumbs.db
 # for others   #
 # ============ #
 
-.log #log files, for some plugins
-.pyc #python bytecode cache, for some plugins.
+*.log #log files, for some plugins
+*.pyc #python bytecode cache, for some plugins.
 sysinfo.txt #Unity3D Generated File On Crash Reports
